Initial pass at getting codon display working.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body>
-    <ol id='genome-history' start='0'>
+    <ol id='genome-history' start='0'></ol>
     </ol>
 
     <div id='instructions'>
