Add amino acid selection after mutation.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,33 @@
       <li>T</li>
     </ul>
 
+    <div id='amino-acid-selector' class='hidden'>
+      <p>Select the amino acid for the codon <span class='codon'>--</span></p>
+      <ul>
+        <li>Ala</li>
+        <li>Arg</li>
+        <li>Asn</li>
+        <li>Asp</li>
+        <li>Cys</li>
+        <li>Gln</li>
+        <li>Glu</li>
+        <li>Gly</li>
+        <li>His</li>
+        <li>Ile</li>
+        <li>Leu</li>
+        <li>Lys</li>
+        <li>Met</li>
+        <li>Phe</li>
+        <li>Pro</li>
+        <li>Ser</li>
+        <li>Thr</li>
+        <li>Trp</li>
+        <li>Tyr</li>
+        <li>Val</li>
+        <li>STOP</li>
+      </ul>
+    </div>
+
     <script src='main.mjs' type='module'></script>
   </body>
 </html>
