First pass at lethal/non-lethal marking.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
       </ul>
     </div>
 
+    <div id='lethality-selector' class='hidden'>
+      <button id='lethal'>Lethal</button>
+      <button id='non-lethal'>Non-lethal</button>
+    </div>
+
     <script src='main.mjs' type='module'></script>
   </body>
 </html>
