Get kill/clone working.

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
           Depending on the change to the codon:
           <ul>
             <li>If the mutation caused a change in the amino acid
-              being coded, then <button id='kill' disabled=''>kill</button> it and
+              being coded, then <button class='kill' disabled=''>kill</button> it and
               start again with the previous generation.</li>
 
-            <li>Otherwise, <button id='clone' disabled=''>clone</button> this
+            <li>Otherwise, <button class='clone' disabled=''>clone</button> this
               genome for the next generation.</li>
           </ul>
         </li>
