Remove penultimate genome slot
I need the last "good" genome, not the second to last one, so instead
thread the original genome (before any mutations) through the required
states so it can be reverted to if a lethal change is made.

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <ul>
             <li>If the mutation caused a change in the amino acid
               being coded, then <button class='kill' disabled=''>kill</button> it and
-              start again with the previous generation.</li>
+              start again with the last successful generation.</li>
 
             <li>Otherwise, <button class='clone' disabled=''>clone</button> this
               genome for the next generation.</li>
