Add initial/final genome displays

--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
   </head>
 
   <body>
-    <ol id='genome-history' start='0'></ol>
-    </ol>
+    <div id='genome-list'>
+      <div class='initial'></div>
+      <div class='history'></div>
+      <div class='final hidden'></div>
+    </div>
 
     <div id='instructions'>
       <div id='die'>
